--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "socket.io-client": "^1.0.6",
     "socketio-jwt": "^2.0.2",
     "twit": "^1.1.18",
+    "underscore": "^1.7.0",
     "wikipedia-js": "0.0.6"
   },
   "devDependencies": {
