--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "~3.8.8",
     "morgan": "~1.0.0",
     "newsquery": "^0.8.7",
+    "ntwitter": "^0.5.0",
     "passport": "~0.2.0",
     "passport-facebook": "latest",
     "passport-google-oauth": "latest",
