--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-ui-router": "~0.2.10",
     "nvd3": "~1.1.15-beta",
     "angularjs-nvd3-directives": "~0.0.7",
-    "d3": "~3.4.11"
+    "d3": "~3.4.11",
+    "angular-loading-bar": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
