--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
+    "alchemy-api": "^1.0.2",
     "angular-loading-bar": "^0.6.0",
     "async": "^0.9.0",
     "body-parser": "~1.5.0",
